--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node src/index",
+    "start": "nodemon src/index --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/zeyu93/graphQL#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-yoga": "^1.18.3",
+    "nodemon": "^2.0.7"
   }
 }
